@@ -1,3 +1,9 @@
+2010-01-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/*.c, src/*.h:
+   Update copyright information.
+
+
 2009-12-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/ao_openuri.c:
